kubernetes/apps/spegel/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: spegel
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spegel
  namespace: spegel
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: spegel
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 9090
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0 # This isn't exposed, so it's actually from the host
      ports:
        - port: 5000
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: spegel
      ports:
        - port: 5001
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: spegel
      ports:
        - port: 5001
          protocol: TCP
